Fixes #24, fixed issues with error messages not showing.  Added margin to modal form and list

--- a/assets/style/scan-page-style.css
+++ b/assets/style/scan-page-style.css
@@ -6,6 +6,6 @@ body {
 }
 
 /* ID SELECTORS */
-#zip-error, #geo-unsupported, #geo-unsupported {
+#zip-error, #geo-unsupported, #geo-error {
     color: red;
 }
